	  (PR #268 Daniel Kamil Kozar)
	* Fixed a crash when resizing the window. (#16680 marcus) (PR #269 Daniel Kamil Kozar)

	General:
	* Fixed bashism in autotools. (#16836 lameventanas) (PR #267 Daniel Kamil Kozar)

	XMPP:
	* Show XEP-0066 OOB URLs in any message, not just headlines
	* Fix a user after free (#17200 debarshiray) (PR #266 Ethan Blanton)

	IRC:
	* Fix "Registration timeout" on SASL auth with InspIRCd servers
	  (and possibly others not based on charybdis/ratbox/ircd-seven)
	* Fix issues with plugins that modify outgoing messages
	  (such as the custom PART/QUIT feature of the IRC More plugin)
	* Fix IRC buffer handling.  (#12562 PR #272 Shivaram Lingamneni)

	Pidgin:
	* Better support for dark themes. (#12572 Alyssa Rosenzweig and Gary Kramlich)
	* Fixed IPv6 links by not escaping []'s. (#16391 cyisfor) (PR #270 Daniel Kamil Kozar)
	* Only write buddy icons to the cache if they're not already cached.  (PR #276 David Woodhouse)
	* Rejoin persistent chats after reconnect.  (#15687 PR #285 Christof Meerwald)
	* Made the WIN32 Transparency plugin work on all platforms. (#3124 PR #287 Daniel Kamil Kozar)

	Finch:
	* Fix handling of search results (#17238 David Woodhouse)

version 2.12.0 (03/09/2017):
	libpurple:
	* Fix an out of bounds memory write in purple_markup_unescape_entity.
	  CVE-2017-2640
	* Fix use of uninitialised memory if running non-debug-enabled versions of glib
	* Updated AIM dev and dist ID's to new ones that were assigned by AOL.
	* TLS certificate verification now uses SHA-256 checksums.
	* Fixed SASL external auth for Freenode.
	* Removed the MSN protocol plugin. It has been unusable and dormant for some
	  time. MSNP18 has been discontinued and the protocol plugin would require a
	  large update to start working again. See: http://ismsndeadyet.com/ The
	  third-party Pidgin SkypeWeb plugin, however, should provide enough
	  functionality as a replacement if people still want to use MSN: