@@ -310,6 +310,7 @@ Ho-seok Lee
 Jean-Yves Lefort
 Moses Lei
 Ambrose C. Li
+Tom Li
 Nicolas Lichtmaier
 Wesley Lin
 Shaun Lindsay
