@@ -16,6 +16,7 @@ version 2.13.0 (??/??/????):
 	XMPP:
 	* Show XEP-0066 OOB URLs in any message, not just headlines
 	* Fix a user after free (#17200 debarshiray) (PR #266 Ethan Blanton)
+	* Removed pipelining from BOSH connections (#17025 PR #295 Tom Li)
 
 	IRC:
 	* Fix "Registration timeout" on SASL auth with InspIRCd servers
@@ -30,6 +31,7 @@ version 2.13.0 (??/??/????):
 	* Only write buddy icons to the cache if they're not already cached.  (PR #276 David Woodhouse)
 	* Rejoin persistent chats after reconnect.  (#15687 PR #285 Christof Meerwald)
 	* Made the WIN32 Transparency plugin work on all platforms. (#3124 PR #287 Daniel Kamil Kozar)
+	* Ensure search results buttons are labeled (Backport from de2d88e575ee)
 
 	Finch:
 	* Fix handling of search results (#17238 David Woodhouse)
